load("//tools:defaults.bzl", "jasmine_node_test", "ng_module", "ng_package", "ng_test_library")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "aspnetcore-engine",
    srcs = glob([
        "*.ts",
        "src/**/*.ts",
    ]),
    module_name = "@nguniversal/aspnetcore-engine",
    deps = [
        "//modules/aspnetcore-engine/tokens",
        "@npm//@angular/common",
        "@npm//@angular/compiler",
        "@npm//@angular/platform-browser",
        "@npm//@angular/platform-server",
        "@npm//rxjs",
    ],
)

ng_package(
    name = "npm_package",
    srcs = [
        ":package.json",
    ],
    entry_point = "modules/aspnetcore-engine/index.js",
    readme_md = ":README.md",
    tags = ["release"],
    deps = [
        ":aspnetcore-engine",
        "//modules/aspnetcore-engine/tokens",
    ],
)

ng_test_library(
    name = "unit_test_lib",
    srcs = glob([
        "spec/**/*.spec.ts",
    ]),
    deps = [
        ":aspnetcore-engine",
    ],
)

jasmine_node_test(
    name = "unit_test",
    srcs = [":unit_test_lib"],
)
