load("//tools:defaults.bzl", "jasmine_node_test", "ng_module", "ng_package", "ng_test_library")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "aspnetcore-engine",
    srcs = glob([
        "*.ts",
        "src/**/*.ts",
    ]),
    module_name = "@nguniversal/aspnetcore-engine",
    deps = [
        "//modules/aspnetcore-engine/tokens",
        "//modules/common/engine",
        "@npm//@angular/common",
        "@npm//@angular/compiler",
        "@npm//@angular/platform-browser",
        "@npm//@angular/platform-server",
        "@npm//rxjs",
    ],
)

ng_package(
    name = "npm_package",
    package_name = "@nguniversal/aspnetcore-engine",
    srcs = [
        ":package.json",
    ],
    entry_point = ":index.ts",
    readme_md = ":README.md",
    tags = ["release"],
    deps = [
        ":aspnetcore-engine",
        "//modules/aspnetcore-engine/tokens",
    ],
)

# NgModule used only for tests.
ng_module(
    name = "testing",
    srcs = glob([
        "testing/**/*.ts",
    ]),
    module_name = "@nguniversal/aspnetcore-engine/testing",
    deps = [
        ":aspnetcore-engine",
        "@npm//@angular/platform-browser",
        "@npm//@angular/platform-server",
    ],
)

ng_test_library(
    name = "unit_test_lib",
    srcs = glob([
        "spec/**/*.spec.ts",
    ]),
    deps = [
        ":aspnetcore-engine",
        ":testing",
        "@npm//@angular/compiler",
        "@npm//@angular/platform-browser",
        "@npm//@angular/platform-server",
        "@npm//domino",
        "@npm//xhr2",
        "@npm//zone.js",
    ],
)

jasmine_node_test(
    name = "unit_test",
    srcs = [":unit_test_lib"],
)
