load("//tools:defaults.bzl", "jasmine_node_test", "ng_module", "ng_package", "ng_test_library")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "aspnetcore-engine",
    package_name = "@nguniversal/aspnetcore-engine",
    srcs = glob([
        "*.ts",
        "src/**/*.ts",
    ]),
    deps = [
        "//modules/aspnetcore-engine/tokens",
        "//modules/common/engine",
        "@npm//@angular/common",
        "@npm//@angular/compiler",
        "@npm//@angular/platform-browser",
        "@npm//@angular/platform-server",
        "@npm//rxjs",
    ],
)

ng_package(
    name = "npm_package",
    package_name = "@nguniversal/aspnetcore-engine",
    srcs = [
        ":package.json",
    ],
    readme_md = ":README.md",
    tags = ["release"],
    deps = [
        ":aspnetcore-engine",
        "//modules/aspnetcore-engine/tokens",
    ],
)

ng_test_library(
    name = "unit_test_lib",
    srcs = glob([
        "spec/**/*.ts",
    ]),
    entry_point = ":spec/index.spec.ts",
    deps = [
        ":aspnetcore-engine",
        "@npm//@angular/compiler",
        "@npm//@angular/platform-browser",
        "@npm//@angular/platform-server",
        "@npm//domino",
        "@npm//xhr2",
        "@npm//zone.js",
    ],
)

jasmine_node_test(
    name = "unit_test",
    srcs = [":unit_test_lib"],
)
