load("//tools:defaults.bzl", "jasmine_node_test", "ng_test_library", "npm_package", "ts_library")

filegroup(
    name = "builders_assets",
    srcs = glob([
        "**/schema.json",
    ] + [
        "package.json",
        "README.md",
        "builders.json",
    ]),
)

ts_library(
    name = "builders",
    srcs = glob(
        ["**/*.ts"],
        exclude = [
            "testing/**",
            "**/*.spec.ts",
        ],
    ),
    module_name = "@nguniversal/builders",
    tsconfig = ":tsconfig.json",
    deps = [
        "@npm//@angular-devkit/architect",
        "@npm//@angular-devkit/core",
        "@npm//@types/browser-sync",
        "@npm//@types/http-proxy-middleware",
        "@npm//browser-sync",
        "@npm//http-proxy-middleware",
        "@npm//rxjs",
        "@npm//tree-kill",
    ],
)

npm_package(
    name = "npm_package",
    srcs = [":builders_assets"],
    tags = ["release"],
    deps = [":builders"],
)

### Testing rules
jasmine_node_test(
    name = "unit_tests",
    srcs = [":unit_test_lib"],
    data = [
        "@npm//@angular/cli",
        "@npm//@angular-devkit/build-angular",
        "@npm//@angular/core",
        "@npm//@angular/router",
        "@npm//@angular/common",
        "@npm//@angular/compiler-cli",
        "@npm//@angular/compiler",
        "@npm//@angular/platform-browser",
        "@npm//@angular/platform-browser-dynamic",
        "@npm//@types/node",
        "@npm//browser-sync",
        "@npm//express",
        "@npm//rxjs",
        "@npm//shelljs",
        "@npm//node-fetch",
        "@npm//zone.js",
        "//modules/express-engine:npm_package",
        ":npm_package",
    ] + glob([
        "testing/hello-world-app/**/*",
    ]),
)

ng_test_library(
    name = "unit_test_lib",
    srcs = glob(
        [
            "testing/*.ts",
            "**/*.spec.ts",
        ],
        exclude = ["testing/hello-world-app/**/*"],
    ),
    tsconfig = ":tsconfig.json",
    deps = [
        ":builders",
        "@npm//@angular-devkit/architect",
        "@npm//@angular-devkit/core",
        "@npm//@types/browser-sync",
        "@npm//@types/shelljs",
        "@npm//rxjs",
    ],
)
