load("//tools:defaults.bzl", "jasmine_node_test", "ng_module", "ng_package", "ng_test_library")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "common",
    srcs = glob([
        "*.ts",
        "src/**/*.ts",
    ]),
    module_name = "@nguniversal/common",
    deps = [
        "//modules/common/engine",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//rxjs",
    ],
)

ng_package(
    name = "npm_package",
    package_name = "@nguniversal/common",
    srcs = [":package.json"],
    entry_point = ":index.ts",
    nested_packages = [
        "//modules/common/schematics:npm_package",
        "//modules/common/clover/server:npm_package",
    ],
    readme_md = ":README.md",
    tags = ["release"],
    deps = [
        ":common",
        "//modules/common/clover",
        "//modules/common/engine",
        "@npm//critters",
    ],
)

ng_test_library(
    name = "unit_test_lib",
    srcs = glob([
        "spec/**/*.spec.ts",
    ]),
    deps = [
        ":common",
        "@npm//@angular/common",
        "@npm//rxjs",
    ],
)

jasmine_node_test(
    name = "unit_test",
    srcs = [":unit_test_lib"],
)
