load("//tools:defaults.bzl", "jasmine_node_test", "ng_module", "ng_package", "ng_test_library")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "express-engine",
    srcs = glob([
        "*.ts",
        "src/**/*.ts",
    ]),
    module_name = "@nguniversal/express-engine",
    deps = [
        "//modules/express-engine/tokens",
        "@angular//packages/compiler",
        "@angular//packages/core",
        "@angular//packages/platform-server",
        "@ngudeps//@types/express",
    ],
)

ng_package(
    name = "npm_package",
    srcs = [
        ":package.json",
    ],
    entry_point = "modules/express-engine/index.js",
    packages = ["//modules/express-engine/schematics:npm_package"],
    readme_md = ":README.md",
    tags = ["release"],
    deps = [
        ":express-engine",
        "//modules/express-engine/tokens",
    ],
)

ng_test_library(
    name = "unit_test_lib",
    srcs = glob([
        "spec/**/*.spec.ts",
    ]),
    deps = [
        ":express-engine",
        "//modules/express-engine/tokens",
        "@angular//packages/compiler",
        "@angular//packages/platform-browser",
        "@angular//packages/platform-server",
        "@ngudeps//domino",
        "@ngudeps//xhr2",
        "@ngudeps//zone.js",
    ],
)

jasmine_node_test(
    name = "unit_test",
    srcs = [":unit_test_lib"],
)
