load("//tools:defaults.bzl", "jasmine_node_test", "ng_module", "ng_package", "ng_test_library")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "express-engine",
    srcs = glob([
        "*.ts",
        "src/**/*.ts",
    ]),
    module_name = "@nguniversal/express-engine",
    deps = [
        "//modules/express-engine/tokens",
        "@npm//@angular/compiler",
        "@npm//@angular/core",
        "@npm//@angular/platform-server",
        "@npm//@types/express",
    ],
)

ng_package(
    name = "npm_package",
    srcs = [
        ":package.json",
    ],
    entry_point = ":index.ts",
    packages = ["//modules/express-engine/schematics:npm_package"],
    readme_md = ":README.md",
    tags = ["release"],
    deps = [
        ":express-engine",
        "//modules/express-engine/tokens",
    ],
)

# NgModule used only for tests.
ng_module(
    name = "testing",
    srcs = glob([
        "testing/**/*.ts",
    ]),
    module_name = "@nguniversal/express-engine/testing",
    deps = [
        ":express-engine",
        "@npm//@angular/platform-browser",
        "@npm//@angular/platform-server",
    ],
)

ng_test_library(
    name = "unit_test_lib",
    srcs = glob([
        "spec/**/*.spec.ts",
    ]),
    deps = [
        ":express-engine",
        ":testing",
        "//modules/express-engine/tokens",
        "@npm//@angular/compiler",
        "@npm//@angular/platform-browser",
        "@npm//@angular/platform-server",
        "@npm//domino",
        "@npm//xhr2",
        "@npm//zone.js",
    ],
)

jasmine_node_test(
    name = "unit_test",
    srcs = [":unit_test_lib"],
)
