load("//tools:defaults.bzl", "jasmine_node_test", "ng_module", "ng_package", "ng_test_library")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "hapi-engine",
    srcs = glob([
        "*.ts",
        "src/**/*.ts",
    ]),
    module_name = "@nguniversal/hapi-engine",
    deps = [
        "//modules/hapi-engine/tokens",
        "@npm//@angular/platform-server",
        "@npm//@types/hapi",
    ],
)

ng_package(
    name = "npm_package",
    srcs = [
        ":package.json",
    ],
    entry_point = "modules/hapi-engine/index.js",
    packages = ["//modules/hapi-engine/schematics:npm_package"],
    readme_md = ":README.md",
    tags = ["release"],
    deps = [
        ":hapi-engine",
        "//modules/hapi-engine/tokens",
    ],
)

ng_test_library(
    name = "unit_test_lib",
    srcs = glob([
        "spec/**/*.spec.ts",
    ]),
    deps = [
        ":hapi-engine",
        "@npm//@angular/platform-browser",
        "@npm//@angular/platform-server",
        "@npm//@types/hapi",
        "@npm//domino",
        "@npm//hapi",
        "@npm//xhr2",
        "@npm//zone.js",
    ],
)

jasmine_node_test(
    name = "unit_test",
    srcs = [":unit_test_lib"],
)
