load("//tools:defaults.bzl", "jasmine_node_test", "ng_module", "ng_package", "ng_test_library")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "hapi-engine",
    package_name = "@nguniversal/hapi-engine",
    srcs = glob([
        "*.ts",
        "src/**/*.ts",
    ]),
    deps = [
        "//modules/common/engine",
        "//modules/hapi-engine/tokens",
        "@npm//@angular/platform-server",
        "@npm//@types/hapi__hapi",
    ],
)

ng_package(
    name = "npm_package",
    package_name = "@nguniversal/hapi-engine",
    srcs = [
        ":package.json",
    ],
    readme_md = ":README.md",
    tags = ["release"],
    deps = [
        ":hapi-engine",
        "//modules/hapi-engine/tokens",
    ],
)

ng_test_library(
    name = "unit_test_lib",
    srcs = glob([
        "spec/**/*.ts",
    ]),
    entry_point = ":spec/index.spec.ts",
    deps = [
        ":hapi-engine",
        "@npm//@angular/compiler",
        "@npm//@angular/platform-browser",
        "@npm//@angular/platform-server",
        "@npm//@hapi/hapi",
        "@npm//@types/hapi__hapi",
        "@npm//domino",
        "@npm//xhr2",
        "@npm//zone.js",
    ],
)

jasmine_node_test(
    name = "unit_test",
    srcs = [":unit_test_lib"],
)
