package(default_visibility = ["//visibility:public"])

load("//tools:defaults.bzl", "ts_library", "ng_module", "ng_package")
load("@build_bazel_rules_nodejs//:defs.bzl", "jasmine_node_test")

ng_module(
    name = "module-map-ngfactory-loader",
    srcs = glob([
        "*.ts",
        "src/**/*.ts",
    ]),
    module_name = "@nguniversal/module-map-ngfactory-loader",
    deps = [],
)

ng_package(
    name = "npm_package",
    srcs = [":package.json"],
    entry_point = "modules/module-map-ngfactory-loader/index.js",
    readme_md = ":README.md",
    tags = ["release"],
    deps = [":module-map-ngfactory-loader"],
)

ts_library(
    name = "unit_test_lib",
    testonly = True,
    srcs = glob([
        "spec/**/*.spec.ts",
    ]),
    deps = [
        ":module-map-ngfactory-loader",
    ],
)

jasmine_node_test(
    name = "unit_test",
    srcs = [":unit_test_lib"],
)
