load("//tools:defaults.bzl", "jasmine_node_test", "ng_module", "ng_package", "ng_test_library")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "module-map-ngfactory-loader",
    srcs = glob([
        "*.ts",
        "src/**/*.ts",
    ]),
    module_name = "@nguniversal/module-map-ngfactory-loader",
    deps = [
        "@npm//@angular/core",
    ],
)

ng_package(
    name = "npm_package",
    srcs = [":package.json"],
    entry_point = ":index.ts",
    readme_md = ":README.md",
    tags = ["release"],
    deps = [":module-map-ngfactory-loader"],
)

ng_test_library(
    name = "unit_test_lib",
    srcs = glob([
        "spec/**/*.spec.ts",
    ]),
    deps = [
        ":module-map-ngfactory-loader",
    ],
)

jasmine_node_test(
    name = "unit_test",
    srcs = [":unit_test_lib"],
)
