load("//tools:defaults.bzl", "jasmine_node_test", "ng_module", "ng_package", "ng_test_library")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "socket-engine",
    srcs = glob([
        "*.ts",
        "src/**/*.ts",
    ]),
    module_name = "@nguniversal/socket-engine",
    deps = [
        "//modules/common/engine",
        "@npm//@angular/core",
    ],
)

ng_package(
    name = "npm_package",
    srcs = [
        ":package.json",
    ],
    entry_point = ":index.ts",
    readme_md = ":README.md",
    tags = ["release"],
    deps = [
        ":socket-engine",
    ],
)

# NgModule used only for tests.
ng_module(
    name = "testing",
    srcs = glob([
        "testing/**/*.ts",
    ]),
    module_name = "@nguniversal/socket-engine/testing",
    deps = [
        "@npm//@angular/platform-browser",
        "@npm//@angular/platform-server",
    ],
)

ng_test_library(
    name = "unit_test_lib",
    srcs = glob([
        "spec/**/*.spec.ts",
    ]),
    deps = [
        ":socket-engine",
        ":testing",
        "@npm//@angular/platform-browser",
        "@npm//@angular/platform-server",
        "@npm//domino",
        "@npm//xhr2",
        "@npm//zone.js",
    ],
)

jasmine_node_test(
    name = "unit_test",
    srcs = [":unit_test_lib"],
)
