load("//tools:defaults.bzl", "ng_module")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "clover",
    srcs = glob([
        "src/**/*.ts",
        "*.ts",
    ]),
    module_name = "@nguniversal/common/clover",
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//rxjs",
    ],
)
