load("//tools:defaults.bzl", "ng_module")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "engine",
    srcs = glob([
        "src/*.ts",
        "*.ts",
    ]),
    module_name = "@nguniversal/common/engine",
    deps = [
        "@npm//@angular/compiler",
        "@npm//@angular/core",
        "@npm//@angular/platform-server",
    ],
)
