load("//tools:defaults.bzl", "ng_module")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "engine",
    package_name = "@nguniversal/common/engine",
    srcs = glob([
        "src/*.ts",
        "*.ts",
    ]),
    deps = [
        "//modules/common/tools",
        "@npm//@angular/core",
        "@npm//@angular/platform-server",
    ],
)
